Resolves: tdf#127695 IsGroupObject == true doesn't mean its a SdrObjGroup

but that it has a SubList

Change-Id: I473464de5c6bba5c36be1ad7cbd21a3158645d66
Reviewed-on: https://gerrit.libreoffice.org/79412
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>
Tested-by: Xisco Faulí <xiscofauli@libreoffice.org>
(cherry picked from commit e6c07d2018d0b6be7492664fa22f70461b1422b8)
Reviewed-on: https://gerrit.libreoffice.org/79428
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@cib.de>